<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="applicaton.lavoro_matic_test.AggiungiDipendente$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp" >

            <EditText
                android:id="@+id/editText_nome"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editText_cognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cognome"
                android:inputType="textPersonName" >
            </EditText>

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editText_ruolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ruolo"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/add_button_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/customstate"
                android:text="Aggiungi" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>