<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="application.lavoro_matic.LoadingActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/loading_text_background"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

			<EditText
			    android:id="@+id/edit_email_login"
			    android:layout_width="match_parent"
			    android:layout_height="50dp"
			    android:hint="Email"
			    android:inputType="textEmailAddress" />

			<EditText
			    android:id="@+id/password_login"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:hint="Password"
			    android:inputType="textPassword" >

			    <requestFocus />
			</EditText>

            <Button
                android:id="@+id/dummy_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="doIntent"
                android:text="@string/effettua_login" />
            <Button
                android:id="@+id/registra"
                style="?metaButtonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:onClick="doRegistra"
                android:text="Registra la tua azienda" />
           
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/instruction_title"
        android:textColor="#33b5e5"
        android:textSize="15sp"
        android:textStyle="bold"/>

    

</RelativeLayout>
